# 1cTask

./: CMakeLists.txt  README.md  main.cpp  picture.hpp  test.cpp
